fix(docs search): fix search appearance on safari pre v14

--- a/src/components/docs-search/docs-search.scss
+++ b/src/components/docs-search/docs-search.scss
@@ -44,9 +44,11 @@ docs-search {
     cursor: pointer;
   }
 
-  .algolia-autocomplete {
+  .algolia-autocomplete input {
     appearance: textfield;
     -webkit-appearance: textfield;
+
+    border: none;
   }
 
   .algolia-autocomplete[class^='algolia-autocomplete'] {
